# IIS-projekt

./: .gitignore  Dockerfile_API  Dockerfile_WEB  README.md  data.dvc  docker-compose.yml  models.dvc  pyproject.toml
.dvc/: config
.github/workflows/: pipeline-daily-metrics.yml  pipeline-daily-train.yml
docs/: overview.drawio
mlruns/0/: meta.yaml
reports/ideja/: ideja_inteligentnega_sistema.docx
src/client/animal-web/: README.md  package-lock.json  package.json
src/client/animal-web/src/: App.vue  main.js
src/client/animal-web/src/components/: AddPicture.vue
src/data/: calculate_metrics.py  get_data.ipynb
src/data/lightning_logs/version_1/: hparams.yaml
src/models/: train.py
src/serve/: app.py
tests/: api_test.py  evidently_test.py
