[tool.poetry]
name = "iis-projekt"
version = "0.1.0"
description = ""
authors = ["LiparAljaz, IskracMarcel"]
license = "MIT"
readme = "README.md"
packages = [{include = "iis_projekt"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
