[tool.poetry]
name = "iis-projekt"
version = "0.1.0"
description = ""
authors = ["LiparAljaz, IskracMarcel"]
license = "MIT"
readme = "README.md"
packages = [{include = "iis_projekt"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
joblib = "^1.2.0"
numpy = "^1.24.3"
pandas = "^2.0.1"
flask-cors = "^3.0.10"
requests = "^2.30.0"
scikit-learn = "^1.2.2"
evidently = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
