[tool.poetry]
name = "iis-projekt"
version = "0.1.0"
description = ""
authors = ["LiparAljaz, IskracMarcel"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
joblib = "^1.2.0"
numpy = "1.23.5"
pandas = "^2.0.1"
flask-cors = "^3.0.10"
requests = "^2.30.0"
scikit-learn = "^1.2.2"
evidently = "^0.3.1"
matplotlib = "^3.7.1"
torch = "2.0.1"
pytorch-lightning = "^2.0.2"
torchvision = "0.15.2"
transformers = "4.30.0"
dvc = "^2.56.0"
openai = "^0.27.7"
bs4 = "^0.0.1"
python-dotenv = "^1.0.0"
pymongo = "^4.3.3"
mlflow = "^2.3.2"
opencv-python = "^4.7.0.72"

[tool.poetry.dev-dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
